example/fastapi-observability-example/manual-instrumented/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: fastapi-manual-instrumented
    app.kubernetes.io/name: fastapi-manual-instrumented
  name: fastapi-manual-instrumented
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: fastapi-manual-instrumented
    app.kubernetes.io/name: fastapi-manual-instrumented
  type: ClusterIP
