example/fastapi-observability-example/manual-instrumented/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/instance: fastapi-manual-instrumented
    app.kubernetes.io/name: fastapi-manual-instrumented
  name: fastapi-manual-instrumented
spec:
  ingressClassName: traefik
  rules:
  - host: fastapi-manual-instrumented.ayanides.cloud
    http:
      paths:
      - backend:
          service:
            name: fastapi-manual-instrumented
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - fastapi-manual-instrumented.ayanides.cloud
    secretName: fastapi-manual-instrumented-tls
